# esp-wolfssl-provisioning-crash

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  energize  gen-data  partitions_hap.csv  sdkconfig.defaults
components/hap/: CMakeLists.txt  README.md
components/hap/include/: hap_manager.h  provisioning.h
components/hap/src/: hap_manager.cpp  provisioning.cpp
components/web/: CMakeLists.txt
components/web/certs/: .gitignore  gen  openssl.cfg  openssl_ca.cfg  openssl_server.cfg  payload.txt
components/web/include/: web_server.h
components/web/src/: web_server.cpp
docker/: Dockerfile  Readme.md  docker-compose.yaml
main/: CMakeLists.txt  main.cpp
tools/debugging/: .gitignore  cfg  cgdb  gdbinit  gdbinit_noreset  provision  run
